--- a/view/opportunity_form.xml
+++ b/view/opportunity_form.xml
@@ -2,8 +2,9 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='party']" position="after">
+    <xpath expr="/form/field[@name='address']" position="after">
         <label name="contact"/>
         <field name="contact"/>
+        <newline/>
     </xpath>
 </data>
