--- a/view/opportunity_form.xml
+++ b/view/opportunity_form.xml
@@ -3,8 +3,8 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/field[@name='address']" position="after">
-        <label name="contact"/>
-        <field name="contact"/>
+        <label name="invoice_contact"/>
+        <field name="invoice_contact"/>
         <newline/>
     </xpath>
 </data>
